# creme_crm

./: .coveragerc  .dockerignore  .eslintignore  .eslintrc  .gitignore  .hgignore  .karma.conf.js  .karma.globals.js  AUTHORS.txt  CHANGELOG.txt  Dockerfile  LICENSE.txt  MANIFEST.in  Makefile  README  README.md  docker-compose.yml  manage.py  mypy.ini  package-lock.json  package.json  setup.cfg  setup.py
.circleci/: .karma.conf.js  circleci_coverage.ini  circleci_settings.py  config.yml  local_settings.py  mysql_settings.py  pgsql_settings.py  sqlite3_settings.py
.docker/: .dockerignore  Dockerfile  bashrc
.githooks/: pre-commit  pre-push  toolkit
ckeditor/: bundle.js  index.html
ckeditor/ckeditor5-placeholder/: placeholder.js
creme/: __init__.py  creme_settings.py  django.wsgi  manage.py  participants_form.py  project_settings.py  requirements-dev.txt  requirements-mysql.txt  requirements-pgsql.txt  requirements.txt  settings.py  urls.py
creme/activesync/: README.md  TODO.txt  __init__.py.old  apps.py  blocks.py  bricks.py  cipher.py  config.py  connection.py  constants.py  contacts.py  creme_config_register.py  creme_core_register.py  creme_jobs.py  errors.py  etutils.py  main.py  messages.py  populate.py  setting_keys.py  signals.py  sync.py  tests.py  urls.py  utils.py  xml2util.py
creme/activities/: __init__.py  actions.py  admin.py  apps.py  blocks.py  bricks.py  buttons.py  cloners.py  constants.py  creme_config_register.py  creme_core_register.py  crudity_email_register.py  crudity_register.py  crudity_register.py.old  custom_forms.py  enumerators.py  menu.py  populate.py  setting_keys.py  signals.py  statistics.py  tests.py  urls.py  utils.py
creme/assistants/: __init__.py  activities_register.py  admin.py  apps.py  blocks.py  bricks.py  constants.py  creme_config_register.py  creme_core_register.py  creme_jobs.py  creme_jobs.py.old  function_fields.py  notification.py  populate.py  reminders.py  setting_keys.py  signals.py  tests.py  urls.py
creme/billing/: __init__.py  actions.py  admin.py  algos.py  algos.py.old  apps.py  billing_register.py  blocks.py  bricks.py  buttons.py  cloners.py  constants.py  converters.py  core.py  creme_config_register.py  creme_core_register.py  custom_forms.py  function_fields.py  gui.py  menu.py  number_generators.py  populate.py  recurrents_register.py  registry.py  registry.py.old  setting_keys.py  signals.py  spawners.py  tests.py  urls.py  utils.py  workflows.py
creme/calendar_config/: apps.py  bricks.py  forms.py  models.py  populate.py  urls.py  views.py
creme/commercial/: __init__.py  activities_register.py  admin.py  apps.py  blocks.py  bricks.py  buttons.py  cloners.py  constants.py  creme_config_register.py  creme_core_register.py  creme_jobs.py  custom_forms.py  gui.py  menu.py  populate.py  setting_keys.py  signals.py  tests.py  urls.py
creme/creme_api/: README  __init__.py  apps.py  bricks.py  forms.py  menu.py  models.py  routes.py  urls.py  views.py
creme/creme_config/: __init__.py  admin.py  apps.py  auth.py  blocks.py  bricks.py  constants.py  creme_core_register.py  gui.py  menu.py  models.py  notification.py  populate.py  registry.py  setting_keys.py  signals.py  tests.py  urls.py  utils.py
creme/creme_core/: __init__.py  actions.py  admin.py  apps.py  blocks.py  bricks.py  buttons.py  checks.py  constants.py  context_processors.py  creme_config_register.py  creme_core_register.py  date_filters_register.py  date_filters_registry.py  enumerators.py  function_fields.py  global_info.py  http.py  menu.py  notification.py  populate.py  registry.py  reminder.py  sandboxes.py  setting_keys.py  shortcuts.py  signals.py  staticfiles.py  urls.py  workflows.py
creme/crudity/: __init__.py  apps.py  blocks.py  bricks.py  buttons.py  constants.py  core.py  creme_core_register.py  creme_jobs.py  crudity_register.py  exceptions.py  forms.py  menu.py  populate.py  registry.py  setting_keys.py  setting_keys.py.old  signals.py  tests.py  urls.py  utils.py  utils.py.old
creme/cti/: __init__.py  apps.py  bricks.py  creme_core_register.py  tests.py  urls.py  utils.py  views.py
creme/custom_entities/: apps.py  custom_forms.py  models.py  populate.py  signals.py  urls.py  views.py
creme/documents/: __init__.py  actions.py  admin.py  apps.py  blocks.py  bricks.py  cloners.py  constants.py  creme_config_register.py  creme_core_register.py  crudity_email_register.py  crudity_register.py  custom_forms.py  deletors.py  gui.py  menu.py  populate.py  tests.py  urls.py  utils.py
creme/editor/: apps.py  forms.py  media.py
creme/emails/: __init__.py  actions.py  admin.py  apps.py  blocks.py  bricks.py  buttons.py  cloners.py  constants.py  creme_config_register.py  creme_core_register.py  crudity_email_register.py  crudity_register.py  custom_forms.py  menu.py  notification.py  populate.py  setting_keys.py  signals.py  tests.py  urls.py  utils.py  workflows.py
creme/events/: __init__.py  apps.py  blocks.py  bricks.py  constants.py  creme_config_register.py  creme_core_register.py  custom_forms.py  gui.py  menu.py  populate.py  tests.py  urls.py
creme/gdpr/: apps.py  bricks.py  constants.py  creme_jobs.py  models.py  populate.py  tests.py  urls.py  views.py
creme/geolocation/: __init__.py  apps.py  blocks.py  bricks.py  constants.py  creme_config_register.py  creme_core_register.py  models.py  populate.py  registry.py  setting_keys.py  signals.py  urls.py  utils.py  views.py
creme/graphs/: __init__.py  admin.py  apps.py  blocks.py  bricks.py  cloners.py  constants.py  creme_core_register.py  custom_forms.py  menu.py  populate.py  requirements.txt  tests.py  urls.py
creme/locale/: pwl.en.txt  pwl.fr.txt
creme/media_managers/: __init__.py  admin.py  apps.py  blocks.py  creme_config_register.py  creme_core_register.py  populate.py  tests.py  urls.py
creme/mobile/: __init__.py  apps.py  blocks.py  bricks.py  creme_core_register.py  (+7 more)
docker/: README.md  docker_settings.py  entrypoint.sh  supervisord.conf  uwsgi.ini
mediagenerator/: TEMPORARY_HACK  api.py  base.py  middleware.py  settings.py  utils.py
(+4997 files in other folders)
