[metadata]
name = creme-crm
author = hybird.org
author_email = contact@hybird.org
url = https://www.cremecrm.com
version = attr: creme.__version__

description = A CRM software using the django web framework
long_description = file: README.md
long_description_content_type = text/markdown

license = AGPL-3.0
license_file = LICENSE.txt

keywords = CRM
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Customer Service
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU Affero General Public License v3
    Natural Language :: English
    Natural Language :: French
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Office/Business
project_urls =
    Release notes = https://raw.githubusercontent.com/HybirdCorp/creme_crm/v2.5/CHANGELOG.txt
    Source = https://github.com/HybirdCorp/creme_crm
    Tracker = https://github.com/HybirdCorp/creme_crm/issues

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    django ~=4.2.11
    redis ~=4.5.5
    Pillow ~=9.5.0
    python-dateutil ~=2.8.2
    bleach[css] ~=6.0
    django-formtools ~=2.4.1
    cryptography ~=41.0.7
    xlrd ~=1.2.0
    xlwt ~=1.3.0
    csscompressor ~=0.9.5
    rjsmin ~=1.2.2
    # We pin the version because there's not a stable version yet, & so breaking can happen
    xhtml2pdf ==0.2.15
    pywin32; platform_system == "Windows"

[options.extras_require]
dev=
    coverage ~=7.2.7
    flake8 ~=6.0
    isort ~=5.10
    ipython
    parameterized ~=0.9.0
    tblib ~=1.7.0
    django-extensions ~=3.2.0
    polib ~=1.2.0
    pyenchant ~=3.2.2
    beautifulsoup4 ~=4.10.0
mysql=
    mysqlclient ~=2.1.1
pgsql=
    psycopg ~=3.1.17
# graphs=
#     pygraphviz ~=1.6.0
billing_weasyprint=
    weasyprint ~= 58.1

[options.entry_points]
console_scripts =
    creme = creme.manage:execute

[isort]
include_trailing_comma = True
multi_line_output = 3
use_parentheses = True

[flake8]
exclude =
    */migrations/*
max-line-length = 99
ignore =
    # Multiple spaces before operator
    E221
    # Multiple spaces after ':', ','
    E241
    # Multiple spaces before keyword
    E272
    # Line break before binary operator. Anti-pattern: https://www.flake8rules.com/rules/W503.html
    W503
