[metadata]
name = creme-crm
author = hybird.org
author_email = contact@hybird.org
url = https://www.cremecrm.com
version = attr: creme.__version__

description = A CRM software using the django web framework
long_description = file: README.md
long_description_content_type = text/markdown

license = AGPL-3.0
license_file = LICENSE.txt

keywords = CRM
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Intended Audience :: Customer Service
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU Affero General Public License v3
    Natural Language :: English
    Natural Language :: French
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Office/Business
project_urls =
    Release notes = https://raw.githubusercontent.com/HybirdCorp/creme_crm/main/CHANGELOG.txt
    Source = https://github.com/HybirdCorp/creme_crm
    Tracker = https://github.com/HybirdCorp/creme_crm/issues

[options]
python_requires = >=3.8
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    django ~=4.2.16
    redis ~=5.0.1
    Pillow ~=10.4.0
    python-dateutil ~=2.8.2
    bleach[css] ~=6.1.0
    django-formtools ~=2.5.1
    cryptography ~=43.0.1
    xlrd ~=2.0.1
    xlwt ~=1.3.0
    openpyxl ~=3.1.5
    csscompressor ~=0.9.5
    rjsmin ~=1.2.2
    # We pin the version because there's not a stable version yet, & so breaking can happen
    xhtml2pdf ==0.2.16
    pywin32; platform_system == "Windows"

[options.extras_require]
dev=
    coverage ~=7.5.0
    flake8 ~=7.0.0
    isort ~=5.13.2
    ipython
    parameterized ~=0.9.0
    tblib ~=3.0.0
    django-extensions ~=3.2.3
    polib ~=1.2.0
    pyenchant ~=3.2.2
    beautifulsoup4 ~=4.12.3
mysql=
    mysqlclient ~=2.2.4
pgsql=
    psycopg ~=3.1.18
billing_weasyprint=
    # NB: pin the version because 0.11.0 has an API breaking (weasyprint 62+ needs Python 3.9+)
    pydyf ~=0.10.0
    weasyprint ~=61.2

[options.entry_points]
console_scripts =
    creme = creme.manage:execute

[isort]
include_trailing_comma = True
multi_line_output = 3
use_parentheses = True

[flake8]
exclude =
    */migrations/*
max-line-length = 99
ignore =
    # Multiple spaces before operator
    E221
    # Multiple spaces after ':', ','
    E241
    # Multiple spaces before keyword
    E272
    # Line break before binary operator. Anti-pattern: https://www.flake8rules.com/rules/W503.html
    W503
